Provide stream-returning method for CsvReader (not used yet)